--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/jscodeshift": "0.7.2",
     "@types/node": "^16.18.3",
     "@types/prettier": "^2.7.1",
     "@types/react": "^18.0.25",
@@ -15,7 +16,9 @@
     "axios": "^1.2.0",
     "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "^0.8.27",
+    "jscodeshift": "0.11.0",
     "localforage": "^1.10.0",
+    "monaco-jsx-highlighter": "0.0.15",
     "prettier": "^2.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
